syntax = "proto3";

option csharp_namespace = "Proto.Notifications.WorkDay";

import "google/protobuf/timestamp.proto";
import "DTO/trace_data.proto";

service NotificationService {
  rpc SendWorkDayCreated(WorkDayCreatedNotification) returns (NotificationResponse);
}

service WorkDayNotificationService {
  rpc SubscribeWorkDayNotifications(SubscribeRequest) returns (stream WorkDayNotification);
}

message WorkDayNotification {
  oneof notification {
    WorkDayCreatedNotification workDayCreated = 1;
  }
}

message WorkDayCreatedNotification {
  string workDayId = 1;
  google.protobuf.Timestamp date = 2;
  TraceDataProto traceData = 3;
}

message NotificationResponse {
  bool success = 1;
  TraceDataProto traceData = 2;
}

message SubscribeRequest {}
